--- a/templates/registerCourse.html
+++ b/templates/registerCourse.html
@@ -12,7 +12,7 @@
             {{ render_field(form.name,class="form-control") }}
             {{ render_field(form.quota,class="form-control") }}
             <select name="grade">       
-                <option selected="true" disabled="disabled"><bold>Grade</bold></option>     
+                <option selected="true" disabled="disabled"><bold>Grade Condition</bold></option>
                      <option>1</option>
                      <option>2</option>
                      <option>3</option>
